// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Quiz Reducer requestQuizSucceeded should add questions to state 1`] = `
Object {
  "questions": Object {
    "0": Object {
      "id": 0,
    },
  },
  "selections": Object {},
}
`;

exports[`Quiz Reducer selectChoice should add selection 1`] = `
Object {
  "questions": Object {},
  "selections": Object {
    "0": "0",
  },
}
`;

exports[`Quiz Reducer selectChoice should handle multiple selections 1`] = `
Object {
  "questions": Object {},
  "selections": Object {
    "0": "0",
    "1": "0",
  },
}
`;

exports[`Quiz Reducer selectChoice should handle multiple selections on the same id 1`] = `
Object {
  "questions": Object {},
  "selections": Object {
    "0": "1",
  },
}
`;
